--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,11 @@ services:
     build:
       context: .
     image: django_app
-    container_name: "django_cont"
+    container_name: "django_app"
     ports:
       - "8000:8000"
     command: sh -c "python manage.py migrate --noinput && gunicorn notesapp.wsgi --bind 0.0.0.0:8000"
-    env_file:
-      - ".env"
-    depends_on:
-      - db
+    # Removed env_file since DB credentials are hardcoded in settings.py
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/admin || exit 1"]
@@ -35,22 +32,6 @@ services:
     networks:
       - notes-app-nw
 
-  db:
-    image: mysql
-    container_name: "db_cont"
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=test_db
-    volumes:
-      - ./data/mysql/db:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 60s
-    networks:
-      - notes-app-nw
-
 networks:
   notes-app-nw:
+    driver: bridge
